# cpp_vscode_demo_new

./: CMakeLists.txt  CMakePresets.json  README.md  test_dll.py
src/: CMakeLists.txt  Calculator.cpp  Calculator.h  export.cpp  export.h  main.cpp
